<resources>

    <string name="app_name">作業七: 吳浩廷</string>
    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>
    <string name="prompt_title">Rolling-a-dice</string>
    <string name="result">輸贏判定</string>

    <string name="total_set">全部局數：</string>
    <string name="player_win_set">玩家贏：</string>
    <string name="comupter_win_set">電腦贏：</string>
    <string name="draw">平手：</string>

    <string name="play">Play</string>
    <string name="btn_show_result">顯示結果</string>
    <string name="btn_hidden_result">隱藏結果</string>
    <string name="btn_go_back">Go back</string>
</resources>
