<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_title"
            android:textSize="30sp"
            android:textColor="#FF00FF"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:layout_gravity="center"
           />


        <ImageView android:id="@+id/imgViewDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_gravity="center"/>

        <TextView android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnShowResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_result"
            android:layout_gravity="center"/>

</LinearLayout>
